--- a/{{cookiecutter.directory_name}}/server/package.json
+++ b/{{cookiecutter.directory_name}}/server/package.json
@@ -17,6 +17,7 @@
     "@types/express": "^4.17.13",
     "@types/mocha": "^9.0.0",
     "@types/node": "^16.11.6",
+    "@types/uuid": "^8.3.1",
     "@typescript-eslint/eslint-plugin": "^5.3.0",
     "@typescript-eslint/parser": "^5.3.0",
     "chai": "^4.3.4",
@@ -31,6 +32,7 @@
   },
   "dependencies": {
     "bunyan": "^1.8.15",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "uuid": "^8.3.2"
   }
 }
