--- a/{{cookiecutter.directory_name}}/server/tsconfig.json
+++ b/{{cookiecutter.directory_name}}/server/tsconfig.json
@@ -10,6 +10,7 @@
   },
   "include": ["./src/**/*.ts"],
   "exclude": ["./src/**/*.test.ts"],
+  "files": ["./src/index.d.ts"],
   "ts-node": {
     "files": true
   }
