--- a/{{cookiecutter.directory_name}}/server/package.json
+++ b/{{cookiecutter.directory_name}}/server/package.json
@@ -15,6 +15,7 @@
     "@types/bunyan": "^1.8.7",
     "@types/chai": "^4.2.22",
     "@types/express": "^4.17.13",
+    "@types/helmet": "^4.0.0",
     "@types/mocha": "^9.0.0",
     "@types/node": "^16.11.6",
     "@types/uuid": "^8.3.1",
@@ -33,6 +34,7 @@
   "dependencies": {
     "bunyan": "^1.8.15",
     "express": "^4.17.1",
+    "helmet": "^4.6.0",
     "uuid": "^8.3.2"
   }
 }
