--- a/{{cookiecutter.directory_name}}/server/package.json
+++ b/{{cookiecutter.directory_name}}/server/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "@types/bunyan": "^1.8.7",
     "@types/chai": "^4.2.22",
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/helmet": "^4.0.0",
     "@types/mocha": "^9.0.0",
@@ -22,6 +23,7 @@
     "@typescript-eslint/eslint-plugin": "^5.3.0",
     "@typescript-eslint/parser": "^5.3.0",
     "chai": "^4.3.4",
+    "cors": "^2.8.5",
     "eslint": "^7.32.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.25.2",
