--- a/{{cookiecutter.directory_name}}/server/package.json
+++ b/{{cookiecutter.directory_name}}/server/package.json
@@ -23,10 +23,13 @@
     "@typescript-eslint/eslint-plugin": "^5.3.0",
     "@typescript-eslint/parser": "^5.3.0",
     "chai": "^4.3.4",
-    "cors": "^2.8.5",
     "eslint": "^7.32.0",
     "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-config-airbnb-typescript": "^15.0.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-chai-friendly": "^0.7.2",
     "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-prettier": "^4.0.0",
     "mocha": "^9.1.3",
     "nodemon": "^2.0.14",
     "prettier": "^2.4.1",
@@ -35,6 +38,7 @@
   },
   "dependencies": {
     "bunyan": "^1.8.15",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "helmet": "^4.6.0",
     "uuid": "^8.3.2"
