--- a/{{cookiecutter.directory_name}}/server/tsconfig.json
+++ b/{{cookiecutter.directory_name}}/server/tsconfig.json
@@ -6,7 +6,8 @@
     "strict": true,
     "rootDir": "./src",
     "outDir": "./dist",
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "types": ["node"]
   },
   "include": ["./src/**/*.ts"],
   "exclude": ["./src/**/*.test.ts"],
