--- a/{{cookiecutter.project_name}}/server/tsconfig.json
+++ b/{{cookiecutter.project_name}}/server/tsconfig.json
@@ -6,8 +6,7 @@
     "strict": true,
     "rootDir": "./src",
     "outDir": "./dist",
-    "skipLibCheck": true,
-    "types": ["node"]
+    "skipLibCheck": true
   },
   "include": ["./src/**/*.ts"],
   "exclude": ["./src/**/*.test.ts"],
