--- a/{{cookiecutter.project_name}}/server/package.json
+++ b/{{cookiecutter.project_name}}/server/package.json
@@ -40,6 +40,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "helmet": "^4.6.0",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "yup": "^0.32.11"
   }
 }
