--- a/{{cookiecutter.project_name}}/server/package.json
+++ b/{{cookiecutter.project_name}}/server/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.1",
   "description": "{{cookiecutter.project_name}} server",
   "scripts": {
-    "start": "export PORT=8080 && export VERSION=local && nodemon src/index.ts | bunyan",
+    "start": "nodemon -r dotenv/config src/index.ts | bunyan",
     "build": "tsc -p ./tsconfig.json",
     "test": "mocha -r ts-node/register src/**/*.test.ts",
     "lint": "eslint --cache --ext .ts src",
@@ -22,6 +22,7 @@
     "@typescript-eslint/eslint-plugin": "^5.3.0",
     "@typescript-eslint/parser": "^5.3.0",
     "chai": "^4.3.4",
+    "dotenv": "^16.0.0",
     "eslint": "^7.32.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-config-airbnb-typescript": "^15.0.0",
