--- a/{{cookiecutter.project_name}}/server/package.json
+++ b/{{cookiecutter.project_name}}/server/package.json
@@ -8,7 +8,7 @@
     "build": "tsc -p ./tsconfig.json",
     "test": "mocha -r ts-node/register src/**/*.test.ts",
     "lint": "eslint --cache --ext .ts src",
-    "lint:fix": "eslint --cache --ext .ts --fix src",
+    "lint:fix": "npm run lint -- --fix",
     "format": "prettier --write \"**/*.ts\""
   },
   "devDependencies": {
