--- a/{{cookiecutter.project_name}}/server/tsconfig.json
+++ b/{{cookiecutter.project_name}}/server/tsconfig.json
@@ -4,12 +4,10 @@
     "module": "commonjs",
     "esModuleInterop": true,
     "strict": true,
-    "rootDir": "./src",
     "outDir": "./dist",
     "skipLibCheck": true
   },
-  "include": ["./src/**/*.ts"],
-  "exclude": ["./src/**/*.test.ts"],
+  "include": ["./src/**/*.ts", "./tests/**/*.ts"],
   "files": ["./src/index.d.ts"],
   "ts-node": {
     "files": true
