--- a/{{cookiecutter.project_name}}/server/package.json
+++ b/{{cookiecutter.project_name}}/server/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.1",
   "description": "{{cookiecutter.project_name}} server",
   "scripts": {
-    "start": "nodemon -r dotenv/config src/index.ts | bunyan",
+    "start": "nodemon -r dotenv/config src/index.ts",
     "build": "tsc -p ./tsconfig.build.json",
     "test": "mocha -r ts-node/register tests/**/*.test.ts",
     "lint": "eslint --cache --ext .ts src",
@@ -12,9 +12,7 @@
     "format": "prettier --write \"**/*.ts\""
   },
   "devDependencies": {
-    "@types/bunyan": "^1.8.7",
     "@types/chai": "^4.2.22",
-    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/mocha": "^9.0.0",
     "@types/node": "^16.11.6",
@@ -24,11 +22,8 @@
     "dotenv": "^16.0.0",
     "eslint": "^7.32.0",
     "eslint-config-airbnb-base": "^14.2.1",
-    "eslint-config-airbnb-typescript": "^15.0.0",
     "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-chai-friendly": "^0.7.2",
     "eslint-plugin-import": "^2.25.2",
-    "eslint-plugin-prettier": "^4.0.0",
     "mocha": "^9.1.3",
     "nodemon": "^2.0.14",
     "prettier": "^2.4.1",
@@ -36,10 +31,10 @@
     "typescript": "^4.4.4"
   },
   "dependencies": {
-    "bunyan": "^1.8.15",
-    "cors": "^2.8.5",
     "express": "^4.17.1",
+    "express-winston": "^4.2.0",
     "helmet": "^4.6.0",
-    "yup": "^0.32.11"
+    "winston": "^3.7.2",
+    "zod": "^3.14.4"
   }
 }
