--- a/{{cookiecutter.project_name}}/server/package.json
+++ b/{{cookiecutter.project_name}}/server/package.json
@@ -31,10 +31,10 @@
     "typescript": "^4.4.4"
   },
   "dependencies": {
-    "express": "^4.17.1",
-    "express-winston": "^4.2.0",
-    "helmet": "^4.6.0",
-    "winston": "^3.7.2",
-    "zod": "^3.14.4"
+    "express": "4.17.1",
+    "express-winston": "4.2.0",
+    "helmet": "4.6.0",
+    "winston": "3.7.2",
+    "zod": "3.14.4"
   }
 }
