--- a/{{cookiecutter.project_name}}/server/Dockerfile
+++ b/{{cookiecutter.project_name}}/server/Dockerfile
@@ -33,7 +33,7 @@ ARG PORT
 
 ENV VERSION=${VERSION}
 ENV PORT=${PORT}
-ENV LOG_LEVEL 'info'
+ENV LOG_LEVEL='info'
 ENV NODE_ENV=production
 
 EXPOSE ${PORT}
