--- a/{{cookiecutter.project_name}}/server/package.json
+++ b/{{cookiecutter.project_name}}/server/package.json
@@ -16,14 +16,14 @@
     "@types/express": "^4.17.13",
     "@types/mocha": "^9.0.0",
     "@types/node": "^16.11.6",
-    "@typescript-eslint/eslint-plugin": "^5.3.0",
-    "@typescript-eslint/parser": "^5.3.0",
+    "@typescript-eslint/eslint-plugin": "^5.25.0",
+    "@typescript-eslint/parser": "^5.25.0",
     "chai": "^4.3.4",
     "dotenv": "^16.0.0",
-    "eslint": "^7.32.0",
-    "eslint-config-airbnb-base": "^14.2.1",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-import": "^2.25.2",
+    "eslint": "^8.15.0",
+    "eslint-config-google": "^0.14.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "mocha": "^9.1.3",
     "nodemon": "^2.0.14",
     "prettier": "^2.4.1",
@@ -31,7 +31,7 @@
     "typescript": "^4.4.4"
   },
   "dependencies": {
-    "ajv": "^8.11.0",
+    "ajv": "8.11.0",
     "express": "4.17.1",
     "express-winston": "4.2.0",
     "helmet": "4.6.0",
