--- a/{{cookiecutter.project_name}}/server/package.json
+++ b/{{cookiecutter.project_name}}/server/package.json
@@ -6,27 +6,26 @@
   "scripts": {
     "start": "nodemon -r dotenv/config src/index.ts",
     "build": "tsc -p ./tsconfig.build.json",
-    "test": "mocha -r ts-node/register tests/**/*.test.ts",
+    "test": "jest",
     "lint": "eslint --cache --ext .ts src",
     "lint-fix": "npm run lint -- --fix",
     "format": "prettier --write \"**/*.ts\""
   },
   "devDependencies": {
-    "@types/chai": "^4.2.22",
     "@types/express": "^4.17.13",
-    "@types/mocha": "^9.0.0",
+    "@types/jest": "^27.5.1",
     "@types/node": "^16.11.6",
     "@typescript-eslint/eslint-plugin": "^5.25.0",
     "@typescript-eslint/parser": "^5.25.0",
-    "chai": "^4.3.4",
     "dotenv": "^16.0.0",
     "eslint": "^8.15.0",
     "eslint-config-google": "^0.14.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.0.0",
-    "mocha": "^9.1.3",
+    "jest": "^28.1.0",
     "nodemon": "^2.0.14",
     "prettier": "^2.4.1",
+    "ts-jest": "^28.0.2",
     "ts-node": "^10.4.0",
     "typescript": "^4.4.4"
   },
