--- a/{{cookiecutter.project_name}}/server/tsconfig.json
+++ b/{{cookiecutter.project_name}}/server/tsconfig.json
@@ -7,7 +7,7 @@
     "outDir": "./dist",
     "skipLibCheck": true
   },
-  "include": ["./src/**/*.ts", "./tests/**/*.ts"],
+  "include": ["./src/**/*.ts", "test/**/*.ts"],
   "files": ["./src/index.d.ts"],
   "ts-node": {
     "files": true
