--- a/{{cookiecutter.project_name}}/server/package.json
+++ b/{{cookiecutter.project_name}}/server/package.json
@@ -8,8 +8,7 @@
     "build": "tsc -p ./tsconfig.build.json",
     "test": "jest",
     "lint": "eslint --cache --ext .ts src",
-    "lint-fix": "npm run lint -- --fix",
-    "format": "prettier --write \"**/*.ts\""
+    "lint-fix": "npm run lint -- --fix"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
