--- a/{{cookiecutter.project_name}}/server/package.json
+++ b/{{cookiecutter.project_name}}/server/package.json
@@ -4,7 +4,7 @@
     "version": "0.0.1",
     "description": "{{cookiecutter.project_name}} server",
     "scripts": {
-        "start": "nodemon -r dotenv/config src/index.ts",
+        "start": "export $(cat .env) && ts-node-dev src/index.ts",
         "build": "tsc -p ./tsconfig.build.json",
         "test": "jest",
         "lint": "eslint --cache --ext .ts src",
@@ -16,15 +16,13 @@
         "@types/node": "^16.11.6",
         "@typescript-eslint/eslint-plugin": "^5.25.0",
         "@typescript-eslint/parser": "^5.25.0",
-        "dotenv": "^16.0.0",
         "eslint": "^8.15.0",
         "eslint-config-prettier": "^8.5.0",
         "eslint-plugin-prettier": "^4.0.0",
         "jest": "^28.1.0",
-        "nodemon": "^2.0.14",
         "prettier": "^2.4.1",
         "ts-jest": "^28.0.2",
-        "ts-node": "^10.4.0",
+        "ts-node-dev": "^2.0.0",
         "typescript": "^4.4.4"
     },
     "dependencies": {
