--- a/{{cookiecutter.project_name}}/server/tsconfig.json
+++ b/{{cookiecutter.project_name}}/server/tsconfig.json
@@ -1,11 +1,13 @@
 {
-  "compilerOptions": {
-    "target": "es2021",
-    "module": "commonjs",
-    "esModuleInterop": true,
-    "strict": true,
-    "outDir": "./dist",
-    "skipLibCheck": true
-  },
-  "include": ["./src/**/*.ts", "test/**/*.ts"],
+    "compilerOptions": {
+        "target": "es2021",
+        "module": "commonjs",
+        "esModuleInterop": true,
+        "strict": true,
+        "outDir": "./dist",
+        "skipLibCheck": true,
+        "noUnusedLocals": true,
+        "noUnusedParameters": true
+    },
+    "include": ["./src/**/*.ts", "test/**/*.ts"]
 }
