--- a/{{cookiecutter.project_name}}/server/package.json
+++ b/{{cookiecutter.project_name}}/server/package.json
@@ -6,19 +6,12 @@
     "scripts": {
         "start": "export $(cat .env) && ts-node-dev src/index.ts",
         "build": "tsc -p ./tsconfig.build.json",
-        "test": "jest",
-        "lint": "eslint --cache --ext .ts src",
-        "lint-fix": "npm run lint -- --fix"
+        "test": "jest"
     },
     "devDependencies": {
         "@types/express": "^4.17.13",
         "@types/jest": "^27.5.1",
         "@types/node": "^16.11.6",
-        "@typescript-eslint/eslint-plugin": "^5.25.0",
-        "@typescript-eslint/parser": "^5.25.0",
-        "eslint": "^8.15.0",
-        "eslint-config-prettier": "^8.5.0",
-        "eslint-plugin-prettier": "^4.0.0",
         "jest": "^28.1.0",
         "prettier": "^2.4.1",
         "ts-jest": "^28.0.2",
