--- a/{{cookiecutter.project_name}}/server/package.json
+++ b/{{cookiecutter.project_name}}/server/package.json
@@ -2,11 +2,14 @@
     "name": "{{cookiecutter.project_name}}-server",
     "private": "true",
     "version": "0.0.1",
+    "main": "./dist/index.js",
     "description": "{{cookiecutter.project_name}} server",
     "scripts": {
         "start": "export $(cat .env) && ts-node-dev src/index.ts",
         "build": "tsc -p ./tsconfig.build.json",
-        "test": "jest"
+        "test": "jest",
+        "format:check": "prettier --check .",
+        "format:write": "prettier --write ."
     },
     "devDependencies": {
         "@types/express": "^4.17.13",
