Move jest config into package.json

--- a/{{cookiecutter.project_name}}/server/package.json
+++ b/{{cookiecutter.project_name}}/server/package.json
@@ -32,5 +32,10 @@
         "printWidth": 120,
         "singleQuote": true,
         "tabWidth": 4
+    },
+    "jest": {
+        "preset": "ts-jest",
+        "testEnvironment": "node",
+        "rootDir": "test"
     }
 }
