--- a/{{cookiecutter.project_name}}/client/package.json
+++ b/{{cookiecutter.project_name}}/client/package.json
@@ -5,7 +5,10 @@
     "description": "{{cookiecutter.project_name}} client",
     "scripts": {
         "start": "node ./scripts/serve.mjs",
-        "build": "node ./scripts/build.mjs"
+        "build": "node ./scripts/build.mjs",
+        "test": "jest",
+        "format:check": "prettier --check .",
+        "format:write": "prettier --write ."
     },
     "dependencies": {
         "react": "^18.2.0",
@@ -16,11 +19,20 @@
         "@types/react-dom": "^18.0.6",
         "esbuild": "^0.15.7",
         "html-minifier": "^4.0.0",
+        "jest": "^29.0.3",
+        "jest-environment-jsdom": "^29.0.3",
+        "prettier": "^2.7.1",
+        "ts-jest": "^29.0.1",
         "typescript": "^4.8.3"
     },
     "prettier": {
         "printWidth": 120,
         "singleQuote": true,
         "tabWidth": 4
+    },
+    "jest": {
+        "preset": "ts-jest",
+        "testEnvironment": "jsdom",
+        "rootDir": "test"
     }
 }
