--- a/{{cookiecutter.project_name}}/server/package.json
+++ b/{{cookiecutter.project_name}}/server/package.json
@@ -12,6 +12,7 @@
         "format:write": "prettier --write ."
     },
     "devDependencies": {
+        "@types/cors": "^2.8.12",
         "@types/express": "^4.17.13",
         "@types/jest": "^27.5.1",
         "@types/node": "^16.11.6",
@@ -23,6 +24,7 @@
     },
     "dependencies": {
         "ajv": "8.11.0",
+        "cors": "^2.8.5",
         "express": "4.17.1",
         "express-winston": "4.2.0",
         "helmet": "4.6.0",
